# libdsp

./: 0001-Add-gitignore-file.patch  0001-test.patch  Makefile.am  config.h  config.h.in  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
include/: adi_osc.h  adi_xml_parse.h  dsp_communication.h  xml_parse.h
src/: Makefile.am  adi_xml_parse.c  dsp_communication.c  xml_parse.c
tests/: Makefile.am  arm_widget.xml  dsp_widget.xml  osc_example.c  osc_widget.xml
