AM_CPPFLAGS             = -I$(top_srcdir)/include

bin_PROGRAMS			= osc_example
osc_example_SOURCES     = osc_example.c
osc_example_LDADD       = $(top_srcdir)/src/libdsp.la

#xml_parse_SOURCES		= $(top_srcdir)/src/xml_parse.c
#xml_parse_CPPFLAGS		= I$(srcdir)/../lib
#xml_parse_LDADD			= $(top_srcdir)/src/libdsp.la -lxml2
